--- a/style.css
+++ b/style.css
@@ -1,255 +1,240 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    --twitter-color: #50b7f5;
-    --twitter-background: #e6ecf0;
-      }
-  
-  .sidebarOption {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .sidebarOption .material-icons,
-  .fa-twitter {
-    padding: 20px;
-  }
-  
-  .sidebarOption h2 {
-    font-weight: 800;
-    font-size: 20px;
-    margin-right: 20px;
-  }
-  
-  .sidebarOption:hover {
-    background-color: var(--twitter-background);
-    border-radius: 30px;
-    color: var(--twitter-color);
-    transition: color 100ms ease-out;
-  }
-  
-  .sidebarOption.active {
-    color: var(--twitter-color);
-  }
-  
-  .sidebar__tweet {
-    width: 100%;
-    background-color: var(--twitter-color);
-    border: none;
-    color: white;
-    font-weight: 900;
-    border-radius: 30px;
-    height: 50px;
-    margin-top: 20px;
-  }
-  
-  body {
-    display: flex;
-    height: 100vh;
-    max-width: 1300px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 10px;
-  }
-  
-  .sidebar {
-    border-right: 1px solid var(--twitter-background);
-    flex: 0.2;
-    
-    min-width: 250px;
-    margin-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  .fa-twitter {
-    color: var(--twitter-color);
-    font-size: 30px;
-  }
-  
-  /* feed */
-  .feed {
-    flex: 0.5;
-    border-right: 1px solid var(--twitter-background);
-    min-width: fit-content;
-    overflow-y: scroll;
-  }
-  
-  .feed__header {
-    position: sticky;
-    top: 0;
-    
-    z-index: 100;
-    border: 1px solid var(--twitter-background);
-    padding: 15px 20px;
-  }
-  
-  .feed__header h2 {
-    font-size: 20px;
-    font-weight: 800;
-  }
-  
-  .feed::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .feed {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-  
-  /* tweet box */
-  .tweetbox__input img {
-    border-radius: 50%;
-    height: 40px;
-  }
-  
-  .tweetBox {
-    position: relative;
-    padding-bottom: 10px;
-    border-bottom: 1px solid var(--twitter-background);;
-    padding-right: 10px;
-  }
-  
-  .tweetbox__input {
-    display: block;
-    
-    
-  }
-  #textArea{  
-    padding: 10px;
-    border-radius: 20px;
-    border-color: none;
-    outline: none;
-    box-shadow: 0 0 .3em gray;
-    text-align: left;
-    width: 100%;
-    height: 150px; 
-    margin-left: 5px;
-    margin-top: 10px;
-    font-size: 20px; 
-    resize: none;  
-    color: #22262a; 
-  }
-  textArea:focus{ 
-    border-color: none;
-    outline: none;
-    box-shadow: 0 0 .3em gray;
-  }
-  #charLimit{
-    font-size: larger;
-    border-radius: 10px; 
-    position: absolute;
-    right: 100px; 
-    bottom: 15px;
-    box-shadow: 2 2 .3em gray;
-  }
-  
-  .tweetbox__input input {
-    flex: 1;
-    margin-left: 20px;
-    font-size: 20px;
-    
-    border: none;
-    outline: none;
-  }
-  
-  .tweetBox__tweetButton {
-    position: absolute;
-    right: 5px; 
-    bottom: 5px;
-    background-color: var(--twitter-color);
-    border: none;
-    color: white;
-    font-weight: 900;
-    
-    border-radius: 30px;
-    width: 80px;
-    height: 40px;
-    
-   
-    
-    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-  
-  /* post */
-  .post__avatar img {
-    border-radius: 50%;
-    height:50px;
-  }
-  
-  .post {
-    
-    display: block;
-    
-    padding-bottom: 10px;
-  }
-  
-  .post__body img {
-    width: 450px;
-    object-fit: contain;
-    border-radius: 20px;
-  }
-  
-  .post__footer {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-  }
-  
-  .post__badge {
-    font-size: 14px !important;
-    color: var(--twitter-color);
-    margin-right: 5px;
-  }
-  
-  
-  .post__headerSpecial {
 
-    font-weight: 600;
-    font-size: 12px;
-    color: gray;
-    
-  }
-  
-  .post__headerText h3 {
-    font-size: 15px;
-    margin-bottom: 5px;
-  }
-  
-  .post_message{
-    margin-bottom: 10px;
-    font-size: 25px;
-  }
-  
-  .post__body {
-    
-    flex: 1;
-    padding: 10px;
-  }
-  
-  .post__avatar {
-    padding: 20px;
-  }
-  
- 
+body {
+  --twitter-color: #50b7f5;
+  --twitter-background: #e6ecf0;
+}
+
+.sidebarOption {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.sidebarOption .material-icons,
+.fa-twitter {
+  padding: 20px;
+}
+
+.sidebarOption h2 {
+  font-weight: 800;
+  font-size: 20px;
+  margin-right: 20px;
+}
+
+.sidebarOption:hover {
+  background-color: var(--twitter-background);
+  border-radius: 30px;
+  color: var(--twitter-color);
+  transition: color 100ms ease-out;
+}
+
+.sidebarOption.active {
+  color: var(--twitter-color);
+}
+
+.sidebar__tweet {
+  width: 100%;
+  background-color: var(--twitter-color);
+  border: none;
+  color: white;
+  font-weight: 900;
+  border-radius: 30px;
+  height: 50px;
+  margin-top: 20px;
+}
+
+body {
+  display: flex;
+  height: 100vh;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 10px;
+}
+
+.sidebar {
+  border-right: 1px solid var(--twitter-background);
+  flex: 0.2;
+
+  min-width: 250px;
+  margin-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.fa-twitter {
+  color: var(--twitter-color);
+  font-size: 30px;
+}
+
+/* feed */
+.feed {
+  flex: 0.5;
+  border-right: 1px solid var(--twitter-background);
+  min-width: fit-content;
+  overflow-y: scroll;
+}
+
+.feed__header {
+  position: sticky;
+  top: 0;
+
+  z-index: 100;
+  border: 1px solid var(--twitter-background);
+  padding: 15px 20px;
+}
+
+.feed__header h2 {
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.feed::-webkit-scrollbar {
+  display: none;
+}
+
+.feed {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* tweet box */
+.tweetbox__input img {
+  border-radius: 50%;
+  height: 40px;
+}
+
+.tweetBox {
+  position: relative;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--twitter-background);
+  padding-right: 10px;
+}
+
+.tweetbox__input {
+  display: block;
+}
+#textArea {
+  padding: 10px;
+  border-radius: 20px;
+  border-color: none;
+  outline: none;
+  box-shadow: 0 0 0.3em gray;
+  text-align: left;
+  width: 100%;
+  height: 150px;
+  margin-left: 5px;
+  margin-top: 10px;
+  font-size: 20px;
+  resize: none;
+  color: #22262a;
+}
+textArea:focus {
+  border-color: none;
+  outline: none;
+  box-shadow: 0 0 0.3em gray;
+}
+#charLimit {
+  font-size: larger;
+  border-radius: 10px;
+  position: absolute;
+  right: 100px;
+  bottom: 15px;
+  box-shadow: 2 2 0.3em gray;
+}
+
+.tweetbox__input input {
+  flex: 1;
+  margin-left: 20px;
+  font-size: 20px;
+
+  border: none;
+  outline: none;
+}
+
+.tweetBox__tweetButton {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  background-color: var(--twitter-color);
+  border: none;
+  color: white;
+  font-weight: 900;
+
+  border-radius: 30px;
+  width: 80px;
+  height: 40px;
+}
+
+/* post */
+.post__avatar img {
+  border-radius: 50%;
+  height: 50px;
+}
+
+.post {
+  display: block;
+
+  padding-bottom: 10px;
+}
+
+.post__body img {
+  width: 75px;
+  object-fit: contain;
+  border-radius: 20px;
+}
+
+.post__footer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+
+.post__badge {
+  font-size: 14px !important;
+  color: var(--twitter-color);
+  margin-right: 5px;
+}
+.post__header {
+  margin: 0px 20px;
+}
+.post__headerSpecial {
+  font-weight: 600;
+  font-size: 12px;
+  color: gray;
+}
+
+.post__headerText h3 {
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.post_message {
+  margin-bottom: 10px;
+  font-size: 25px;
+}
+
+.post__body {
+  display: flex;
+  margin: 10px;
+}
+
+.post__avatar {
+  padding: 20px;
+}
+
 .dark-mode {
-    background-color: #22262a;  
-    border-color: white;
-    color: white;
-
-  } 
+  background-color: #22262a;
+  border-color: white;
+  color: white;
+}
 /*Profile*/
 
-  
-
-  
- /* The switch - the box around the slider */
-
+/* The switch - the box around the slider */
 
 /* Hide default HTML checkbox */
